@@ -1,5 +1,8 @@
 package com.app.univchat.service.chat;
 
+import com.app.univchat.base.BaseException;
+import com.app.univchat.domain.LiveChat;
+import com.app.univchat.domain.LoveChat;
 import com.app.univchat.domain.Member;
 import com.app.univchat.dto.ChatReq;
 import com.app.univchat.dto.ChatRes;
@@ -16,9 +19,13 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static com.app.univchat.base.BaseResponseStatus.CHAT_OVERFLOW_THE_RANGE;
 
 @Service
 @RequiredArgsConstructor
@@ -55,28 +62,39 @@ public class LoveChatService {
         //총 페이지수 0~maxPage, 0이 최신
         int maxPage = all / size;
 
-        //총 페이지 수 나누어 떨어지면 마지막 페이지에 아무것도 없음(페이지는 0부터 시작하기 때문)
-        if(maxPage%size == 0) maxPage--;
+        //총 채팅 수 나누어 떨어지면 마지막 페이지에 아무것도 없음(페이지는 0부터 시작하기 때문)
+        if(all%size == 0 && maxPage > 0) maxPage--;
 
-        if(page > maxPage) return null;
+        if(page > maxPage || page <= -2) throw new BaseException(CHAT_OVERFLOW_THE_RANGE);
+
+        List<LoveChat> page2 = new ArrayList<>();
 
         if(page == -1){
             //초기에 채팅 리스트 불러올 때
             //-1로 접근하면 무조건 최신 10개
             page = maxPage;
+
+            //최신 채팅 페이지네이션할 때 10개 미만이면 다음 페이지도 함께 조회
+            if (all%size != 0 && page > 0) {
+                PageRequest pageable = PageRequest.of(page-1, size,
+                        Sort.by("messageSendingTime").ascending());
+                page2 = loveChatRepository.findAll(pageable).toList();
+            }
         }
 
-        // page는 요청하는 곳에 맞게, 한 번의 요청에는 10개의 채팅, 시간 내림차순으로 정렬.
-        Pageable pageable = PageRequest.of(page, size,
+        //pageable 객체 생성
+        PageRequest pageable = PageRequest.of(page, size,
                 Sort.by("messageSendingTime").ascending());
 
-        // pagenation 한 채팅 목록을 modleMapper로 변환하여 반환
-        List<ChatRes.LoveChatRes> chattingList = loveChatRepository
-                        .findAll(pageable)
-                        .stream()
-                        .map(chat -> modelMapper.map(chat, ChatRes.LoveChatRes.class))
-                        .sorted((o1, o2) -> o2.getMessageSendingTime().compareTo(o1.getMessageSendingTime()))
-                        .collect(Collectors.toList());
+        // ChatRes.LoveChatRes으로 변환하여 반환
+        List<LoveChat> page1 = loveChatRepository.findAll(pageable).toList();
+        if (!page2.isEmpty()) {
+            page1 = Stream.concat(page1.stream(), page2.stream()).collect(Collectors.toList());
+        }
+        List<ChatRes.LoveChatRes> chattingList = page1.stream()
+                .map(chat -> modelMapper.map(chat, ChatRes.LoveChatRes.class))
+                .sorted((o1, o2) -> o2.getMessageSendingTime().compareTo(o1.getMessageSendingTime()))
+                .collect(Collectors.toList());
 
         for(ChatRes.LoveChatRes chatting : chattingList) {
             chatting.setMessageContent(cipherService.decryptChat(chatting).getMessageContent());
